--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
-
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -127,7 +127,7 @@
 						text-align: center;
 						position: relative;
 						margin: 0 0 60px;">
-                            <h2 style="color: chocolate;">Sự kiện nhà trai</h2>
+                            <h2 style="color: chocolate;" class="head-font">Sự kiện nhà trai</h2>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
             </div>
         </section>
 
-        <section section-scroll="2" class="event-area">
+        <section section-scroll="2" class="event-area" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfMO0GZxmDZLRvIhBv7Tv-lJeJMXntlpDsJw&usqp=CAU);">
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
 				margin-right: auto;
@@ -173,7 +173,7 @@
 						text-align: center;
 						position: relative;
 						margin: 0 0 60px;">
-                            <h2 style="color: chocolate;">Sự kiện nhà gái</h2>
+                            <h2 style="color: chocolate;" class="head-font">Sự kiện nhà gái</h2>
                         </div>
                     </div>
                 </div>
@@ -212,8 +212,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <!-- <span>Khoảnh Khắc Bên Nhau</span> -->
-                        <h2 class="heading-title">Khoảnh Khắc Bên Nhau</h2>
-                        <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
+                        <h2 class="heading-title head-font">Khoảnh Khắc Bên Nhau</h2>
+                         <div class="after-banner"></div>
                     </div>
                 </div>
                 <div class="row row-bottom-padded-md">
@@ -299,8 +299,8 @@
             <div class="container">
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2 class="heading-title">Bạn sẽ tới tham dự chứ</h2>
-                        <p>Vui lòng xác nhận tại bên dưới để chúng tôi biết được bạn sẽ tới tham dự</p>
+                        <h2 class="heading-title">Vui lòng xác nhận tại đây</h2>
+                        <!-- <p>Vui lòng xác nhận tại bên dưới để chúng tôi biết được bạn sẽ tới tham dự</p> -->
                     </div>
                 </div>
                 <div class="row animate-box">
