--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/2T7A3775.JPG); background-size: cover;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center">
+                <div class="row" style="justify-content: center;">
+                    <div class="col-md-8 col-md-offset-2 text-center" style="margin: auto;">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
                                 <h1 id="blink" class="hi">Trân Trọng Kính Mời</h1>
@@ -89,7 +89,7 @@
             </div>
         </header>
 
-        <div id="section0" class="container pt-90 pb-10 mobile-pt-50 overflow-hidden">
+        <!-- <div id="section0" class="container pt-90 pb-10 mobile-pt-50 overflow-hidden">
             <div class="section-container">
                 <div class="weddio-ring position-absolute d-flex justify-content-center align-items-center wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.3s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 1.3s; animation-name: fadeInUp;">
                     <img src="images/weddio-ring-img.png" alt="weddio ring">
@@ -113,8 +113,32 @@
                     </div>
                 </div>
             </div>
-        </div>
-
+        </div> -->
+        <div id="fh5co-couple" class="fh5co-section-gray">
+			<div class="container">
+				<div class="row row-bottom-padded-md animate-box fadeInUp animated">
+					<div class="col-md-6 col-md-offset-3 text-center avatar-container">
+						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
+							<img src="https://scontent.fhan19-1.fna.fbcdn.net/v/t39.30808-6/269118732_1877054335831875_6438373798493749148_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=174925&_nc_ohc=JYQFIv7mFv0AX-mOSL2&_nc_ht=scontent.fhan19-1.fna&oh=00_AfDjE37LP7sKCt3vmQSYCT0NGpIYm6vGSYLQfKFq_uqALg&oe=641A5B08" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<h3 class="name-style">Đức Mạnh</h3>
+						</div>
+						<div class="col-md-2 col-sm-2 col-xs-2 nopadding"><h2 class="amp-center"><i class="icon-heart"></i></h2> </div>
+						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
+							<img src="images/embe2.jpg" style="width: 100%;" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<h3 class="name-style">Thùy Dung</h3>
+						</div>
+                        <!-- <img src="http://glanz.starkethemes.com/html/images/animations/savethedate_wh.gif" data-bottom-top="" height="150" alt="" class="skrollable skrollable-after"> -->
+					</div>
+				</div>
+				<div class="row animate-box fadeInUp animated">
+					<div class="col-md-8 col-md-offset-2">
+						<div class="col-md-12 text-center heading-section">
+					
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
         <section section-scroll="2" class="event-area">
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
@@ -162,6 +186,10 @@
         </section>
 
         <section section-scroll="2" class="event-area" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfMO0GZxmDZLRvIhBv7Tv-lJeJMXntlpDsJw&usqp=CAU);">
+            <!-- <div id="svg-icon-love" class="svg-icon size-2"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 411.6 336.84" width="100%" height="100%" style="
+                display: flex;
+            "><defs><style>.cls-1{fill:none;stroke:#231f20;stroke-miterlimit:10;stroke-width:2px;}</style></defs><title>049-love</title><path class="cls-1" d="M234.19,1.47c-.28-3.91-.72-7.86-1.32-11.74A111,111,0,0,0,188.5-83.36a111,111,0,0,0-83.05-20.31A111,111,0,0,0,28.77-54.11a111,111,0,0,0-88-24.18,111,111,0,0,0-73.09,44.37,111,111,0,0,0-20.31,83.05C-137.95,144.72-33.3,195.28,27.77,216.91a6,6,0,1,0,4-11.23C-104.68,157.35-135,85.71-140.9,47.31A99.91,99.91,0,0,1-57.46-66.52,99.25,99.25,0,0,1,26.11-40.59a6,6,0,0,0,5,1.54,6,6,0,0,0,4.29-3,99.26,99.26,0,0,1,71.88-49.87,99.14,99.14,0,0,1,74.2,18.14A99.14,99.14,0,0,1,221.09-8.46c.55,3.56,1,7.19,1.21,10.77a6,6,0,1,0,11.88-.85Zm0,0" transform="translate(155 106)" style="stroke-dasharray: 1613, 1615; stroke-dashoffset: 0;"></path><path class="cls-1" d="M192.17,8.15a84.32,84.32,0,0,0-67,10.51,84.87,84.87,0,0,0-117.65-33A84.31,84.31,0,0,0-31.68,37.4c-6,23.07-4.4,47.61,4.84,72.91,7.27,19.93,19.26,40.38,35.64,60.77A344.89,344.89,0,0,0,68.08,228.7a6,6,0,0,0,3.5,1.14,6.13,6.13,0,0,0,.7,0,344.41,344.41,0,0,0,79.88-21.27c24.26-9.78,44.72-21.76,60.8-35.59,20.43-17.56,33.84-38.17,39.87-61.24A85,85,0,0,0,192.17,8.15Zm49.14,100.54c-5.39,20.65-17.5,39.19-36,55.13-15.06,13-34.36,24.27-57.36,33.57a343.37,343.37,0,0,1-74.74,20.27,343.54,343.54,0,0,1-55.29-54.22C2.41,144.07-8.91,124.79-15.7,106.11c-8.35-22.94-9.84-45-4.45-65.69A73,73,0,0,1,50.3-14.13a73.28,73.28,0,0,1,18.55,2.4,72.54,72.54,0,0,1,48.54,41.64,6,6,0,0,0,9.08,2.37,72.95,72.95,0,0,1,114.85,76.41Zm0,0" transform="translate(155 106)" style="stroke-dasharray: 1662, 1664; stroke-dashoffset: 0;">
+            </path></svg></div> -->
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
 				margin-right: auto;
@@ -299,7 +327,7 @@
             <div class="container">
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                        <h2 class="heading-title">Vui lòng xác nhận tại đây</h2>
+                        <h2 class="heading-title">Tham gia cùng chúng tôi</h2>
                         <!-- <p>Vui lòng xác nhận tại bên dưới để chúng tôi biết được bạn sẽ tới tham dự</p> -->
                     </div>
                 </div>
@@ -319,7 +347,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 flex-column" style="font-size: 20px; color: floralwhite; padding-top: 3%;">
-                                <label class="text-center">Bạn sẽ tới và chung vui cùng chúng tôi chứ ?</label>
+                                <!-- <label class="text-center">Bạn sẽ tới và chung vui cùng chúng tôi chứ ?</label> -->
 
                                 <label class="label-input text-center">
                                     <input type="radio" id="radio01" name="attend" value="1" checked="">
