--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2 class="heading-title">Mạnh & Dung</h2>
-                        <p>02|04|2023</p>
+                        <p style="margin-bottom: 2rem !important;"> 02|04|2023</p>
+                        <div class="after-banner"></div>
                     </div>
                 </div>
                 <div class="row">
@@ -407,7 +408,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 animate-box">
+                    <div class="col-md-6 animate-box qr-2">
                         <div class="fh5co-video fh5co-bg" style="background-image: url(images/qrmanh.jpg);">
                      
                             <!-- <div class="overlay"></div> -->
@@ -429,16 +430,16 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">Notification 
+              <h4 class="modal-title">Thông báo 
              </h4>
               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfUW1pWZxuc63TsAUnckYPU_p6mDtMO5o9EXZDJfA&s" class="success-icon"> </img>
               <button type="button" class="btn-close" onclick="handleClose(event)" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <p>You have successfully submitted !</p>
+              <p>Bạn đã xác nhận thành công!</p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="handleClose(event)">Close</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="handleClose(event)">Đóng</button>
               <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="handleClose(event)">Oke</button>
             </div>
           </div>
