--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="container">
 				<div class="row row-bottom-padded-md animate-box fadeInUp animated">
                     <div class="col-md-12 col-sm-12">
-                        <h2 class="heading-title text-center bold" style="color: chocolate; font-family: 'Pacifico';">Cưới Thôi</h2>
+                        <h2 id="avater-title" class="heading-title text-center bold" style="color: chocolate; font-family: 'Pacifico';">Cưới Thôi</h2>
                    
                         <p class="text-center sub-text">
                             Kính mời bạn và người thương đến chung vui cùng chúng mình
@@ -130,14 +130,20 @@
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 							<img src="images/manhdz.png" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 							<h3 class="name-style">Bé Sen</h3>
+                            <h4 class="full-name">
+                                Nguyễn Đức Mạnh
+                            </h4>
                             <h4 class="des-text">
                                 Vui tính - Nhiệt tình - Dễ thương
                             </h4>
 						</div>
-						<div class="col-md-2 col-sm-2 col-xs-2 nopadding" style="padding-left: 0; padding-right: 0"><h2 class="amp-center" style="transform: translateY(-50%);"><i class="icon-heart"></i></h2> </div>
+						<div class="col-md-2 col-sm-2 col-xs-2 nopadding" style="padding-left: 0; padding-right: 0"><h2 class="amp-center" style="transform: translateY(-50%);"><img src="./images//heart-1.png" class="icon-heart icon-animation"></img></h2> </div>
 						<div class="col-md-5 col-sm-5 col-xs-5 nopadding">
 							<img src="images/embe2.png"  class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 							<h3 class="name-style">Bé Boss</h3>
+                            <h4 class="full-name">
+                                Nguyễn Thùy Dung
+                            </h4>
                             <h4 class="des-text">
                                 Thông minh - Xinh gái - Dễ bảo
                             </h4>
@@ -145,15 +151,9 @@
                         <!-- <img src="http://glanz.starkethemes.com/html/images/animations/savethedate_wh.gif" data-bottom-top="" height="150" alt="" class="skrollable skrollable-after"> -->
 					</div>
 				</div>
-				<div class="row animate-box fadeInUp animated">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="col-md-12 text-center heading-section">
-					
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
+
         <section section-scroll="2" class="event-area sec01">
             <div class="container" style="padding-right: 15px;
 				padding-left: 15px;
@@ -377,13 +377,13 @@
                             <div class="col-md-12 col-sm-12" style="padding-top: 2%;">
                                 <div class="form-group">
                                     <label for="name" class="sr-only">Họ và tên</label>
-                                    <input type="name" class="form-control" id="name" name="name" placeholder="Họ và tên" required maxlength="18">
+                                    <input type="name" class="form-control" id="name" name="name" placeholder="Họ và tên" required>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12" style="padding-top: 2%; padding-bottom: 2%;">
                                 <div class="form-group">
                                     <label for="text" class="sr-only">Lời chúc</label>
-                                    <input type="text" class="form-control" id="text" name="text" placeholder="Lời chúc" maxlength="38" rows="4" > 
+                                    <input type="text" class="form-control" id="text" name="text" placeholder="Lời chúc" rows="4" > 
                                     <!-- <textarea type="text" class="form-control" id="text" name="text" placeholder="Lời chúc" maxlength="38">
                                   </textarea> -->
                                 </div>
@@ -407,7 +407,7 @@
                 <div class="overlay"></div>
                 <div class="row animate-box">
                     <div class="col-md-12 text-center fh5co-heading">
-                        <h2 class="heading-title">Mạnh & Dung</h2>
+                        <h2 class="heading-title">Đức Mạnh & Thùy Dung</h2>
                         <p style="margin-bottom: 2rem !important;"> 02|04|2023</p>
                         <div class="after-banner"></div>
                     </div>
