--- a/index.html
+++ b/index.html
@@ -351,14 +351,14 @@
         <div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/img_bg_4.jpg);">
             <div class="overlay"></div>
             <div class="container">
-                <div class="row animate-box">
+                <div class="row animate-box center-item">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2 class="heading-title">We Are Waiting
                            </h2>
                         <p>Chỉ còn vài ngày nữa là đến thời khắc quan trọng nhất trong cuộc đời của hai đứa mình. Đừng bỏ lỡ, hãy đến chung vui với chúng mình nhé!</p>
                     </div>
                 </div>
-                <div class="row animate-box">
+                <div class="row animate-box center-item">
                     <div class="col-md-10 col-md-offset-1">
                         <form class="form-inline" id="form-submit">
                             <div class="col-md-12 col-sm-12 flex-column" style="font-size: 20px; color: floralwhite;">
@@ -483,7 +483,7 @@
 
     <script>
         var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
-
+        console.log("Version 1.0.1 === 19h50/20/3")
         // default example
         simplyCountdown('.simply-countdown-one', {
             year: d.getFullYear(),
