--- a/index.html
+++ b/index.html
@@ -89,39 +89,13 @@
                 </div>
             </div>
         </header>
-
-        <!-- <div id="section0" class="container pt-90 pb-10 mobile-pt-50 overflow-hidden">
-            <div class="section-container">
-                <div class="weddio-ring position-absolute d-flex justify-content-center align-items-center wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.3s" style="visibility: visible; animation-duration: 1.3s; animation-delay: 1.3s; animation-name: fadeInUp;">
-                    <img src="images/weddio-ring-img.png" alt="weddio ring">
-                </div>
-                <div class="col-12 col-sm-12 col-md-5 pb-40 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    <div class="weddio-img">
-                        <img src="images/manh.jpg" alt="">
-                    </div>
-                    <div class="weddio-content">
-                        <h5>Chú rể</h5>
-                        <h3>Nguyễn Đức Mạnh</h3>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-12 col-md-5 pb-40 mt-50 mobile-mt-0 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s" style="visibility: visible; animation-duration: 1s; animation-delay: 0.6s; animation-name: fadeInUp;">
-                    <div class="weddio-img">
-                        <img src="images/embe.png" alt="">
-                    </div>
-                    <div class="weddio-content text-start text-sm-start text-md-end text-lg-end">
-                        <h5>Cô dâu</h5>
-                        <h3 class="embename">Nguyễn Thùy Dung</h3>
-                    </div>
-                </div>
-            </div>
-        </div> -->
         <div id="fh5co-couple" class="fh5co-section-gray">
 			<div class="container">
 				<div class="row row-bottom-padded-md animate-box fadeInUp animated">
                     <div class="col-md-12 col-sm-12">
                         <h2 id="avater-title" class="heading-title text-center bold" style="color: chocolate; font-family: 'Pacifico';">Cưới Thôi</h2>
                    
-                        <p class="text-center sub-text">
+                        <p class="text-center sub-text invite-text">
                             Kính mời bạn và người thương đến chung vui cùng chúng mình
                         </p>
                         <div class="after-banner" style="position: unset;"></div>
@@ -202,7 +176,7 @@
             </div>
         </section>
 
-        <section section-scroll="2" class="event-area sec02" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfMO0GZxmDZLRvIhBv7Tv-lJeJMXntlpDsJw&usqp=CAU);">
+        <section section-scroll="2" class="event-area sec02" style="background-color: #FEE4C0;">
             <!-- <div id="svg-icon-love" class="svg-icon size-2"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 411.6 336.84" width="100%" height="100%" style="
                 display: flex;
             "><defs><style>.cls-1{fill:none;stroke:#231f20;stroke-miterlimit:10;stroke-width:2px;}</style></defs><title>049-love</title><path class="cls-1" d="M234.19,1.47c-.28-3.91-.72-7.86-1.32-11.74A111,111,0,0,0,188.5-83.36a111,111,0,0,0-83.05-20.31A111,111,0,0,0,28.77-54.11a111,111,0,0,0-88-24.18,111,111,0,0,0-73.09,44.37,111,111,0,0,0-20.31,83.05C-137.95,144.72-33.3,195.28,27.77,216.91a6,6,0,1,0,4-11.23C-104.68,157.35-135,85.71-140.9,47.31A99.91,99.91,0,0,1-57.46-66.52,99.25,99.25,0,0,1,26.11-40.59a6,6,0,0,0,5,1.54,6,6,0,0,0,4.29-3,99.26,99.26,0,0,1,71.88-49.87,99.14,99.14,0,0,1,74.2,18.14A99.14,99.14,0,0,1,221.09-8.46c.55,3.56,1,7.19,1.21,10.77a6,6,0,1,0,11.88-.85Zm0,0" transform="translate(155 106)" style="stroke-dasharray: 1613, 1615; stroke-dashoffset: 0;"></path><path class="cls-1" d="M192.17,8.15a84.32,84.32,0,0,0-67,10.51,84.87,84.87,0,0,0-117.65-33A84.31,84.31,0,0,0-31.68,37.4c-6,23.07-4.4,47.61,4.84,72.91,7.27,19.93,19.26,40.38,35.64,60.77A344.89,344.89,0,0,0,68.08,228.7a6,6,0,0,0,3.5,1.14,6.13,6.13,0,0,0,.7,0,344.41,344.41,0,0,0,79.88-21.27c24.26-9.78,44.72-21.76,60.8-35.59,20.43-17.56,33.84-38.17,39.87-61.24A85,85,0,0,0,192.17,8.15Zm49.14,100.54c-5.39,20.65-17.5,39.19-36,55.13-15.06,13-34.36,24.27-57.36,33.57a343.37,343.37,0,0,1-74.74,20.27,343.54,343.54,0,0,1-55.29-54.22C2.41,144.07-8.91,124.79-15.7,106.11c-8.35-22.94-9.84-45-4.45-65.69A73,73,0,0,1,50.3-14.13a73.28,73.28,0,0,1,18.55,2.4,72.54,72.54,0,0,1,48.54,41.64,6,6,0,0,0,9.08,2.37,72.95,72.95,0,0,1,114.85,76.41Zm0,0" transform="translate(155 106)" style="stroke-dasharray: 1662, 1664; stroke-dashoffset: 0;">
@@ -236,7 +210,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img src="./images/c3dfc6870648db168259.jpg" alt=""></figure>
+                            <figure><img src="./images/nhagai2.jpg" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -257,8 +231,8 @@
 
         <div id="fh5co-gallery" class="fh5co-section-gray">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                <div class="row" style="justify-content: center;">
+                    <div class="col-md-12 col-sm-12 text-center fh5co-heading animate-box">
                       
                         <h2 class="heading-title head-font">Khoảnh Khắc Bên Nhau</h2>
                           <p class="text-center sub-text" style="margin-bottom: 0px;">
