--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </nav>
 
-        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/2T7A3775.JPG); background-size: cover;" data-stellar-background-ratio="0.5">
+        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/main.jpg); background-size: cover;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row" style="justify-content: center;">
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </header>
-        <div id="fh5co-couple" class="fh5co-section-gray">
+        <div id="fh5co-couple" class="fh5co-section-gray" style="background-image: url(images/img_bg_5.jpg);">
 			<div class="container">
 				<div class="row row-bottom-padded-md animate-box fadeInUp animated">
                     <div class="col-md-12 col-sm-12">
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img src="./images/c3dfc6870648db168259.jpg" alt=""></figure>
+                            <figure><img src="./images/nhatrai.png" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -210,7 +210,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img src="./images/nhagai2.jpg" alt=""></figure>
+                            <figure><img src="./images/nhagai.png" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -248,8 +248,8 @@
                     <div class="col-md-12">
                         <ul id="fh5co-gallery-list">
 
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3da9f3563e99e3c7ba88.jpg); ">
-                                <a href="images/3da9f3563e99e3c7ba88.jpg" class="popup-link">
+                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/veotai.jpg); ">
+                                <a href="images/veotai.jpg" class="popup-link">
                                     <div class="case-studies-summary">
                 
                                     </div>
