change flower and image

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img src="./images/nhatrai.png" alt=""></figure>
+                            <figure><img src="./images/nhagai.png" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
@@ -373,7 +373,7 @@
                                 </button>
                             </div>
                             <div class="col-md-6 col-sm-12" style="margin: auto">
-                                <button type="button" id="btn-donate" onclick="submitDonateFunction(event)"  class="btn btn-default btn-block">
+                                <button type="button" id="btn-donate" onclick="submitDonateFunction(event)"  class="btn btn-default btn-block buttonDonate">
                                     <span style="margin-right: 1%;">
                                         &#129297;
                                     </span> 
@@ -562,7 +562,7 @@
         }
         function submitDonateFunction(event) {
             event.preventDefault()
-            document.getElementById("submit-donate").click()
+            // document.getElementById("submit-donate").click()
         }
         function submitFunction(event) {
             /* Submit Form */
