update flower and css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </header>
-        <div id="fh5co-couple" class="fh5co-section-gray">
+        <div id="fh5co-couple" class="fh5co-section-gray" style="background-color: #fff;">
 			<div class="container">
 				<div class="row row-bottom-padded-md animate-box fadeInUp animated">
                     <div class="col-md-12 col-sm-12">
@@ -141,6 +141,7 @@
 						position: relative;
 						margin: 0 0 60px;">
                             <h2 style="color: chocolate;" class="head-font">Sự kiện cưới</h2>
+                            <div class="after-banner" style="position: unset;"></div>
                         </div>
                     </div>
                 </div>
@@ -149,8 +150,8 @@
                         <div class="event-infobox">
                             <h2 class="event-title">Lễ Vu Quy</h2>
                             <h1>8:00 am</h1>
-                            <span>Chủ nhật |<div class="sub-day"> 02 </div>| 04/2023</span>
-                            <p class="address" style="margin-bottom: 0;">Xóm Tây Hành Quần, Xã Bình Minh</p>
+                            <span>Chủ nhật |<div class="sub-day"> 02 </div>| 04 | 2023</span>
+                            <p class="address" style="margin-bottom: 0;">Thôn Tây Hành Quần, Xã Bình Minh</p>
                             <p class="address">Huyện Nam Trực, Tỉnh Nam Định </p>
                      
                             <a style="text-decoration: none;" class="btgbtn" href="https://www.google.com/maps/place/20%C2%B019'43.6%22N+106%C2%B013'13.9%22E/@20.328777,106.220533,17z/data=!3m1!4b1!4m4!3m3!8m2!3d20.328777!4d106.220533">Chỉ Đường</a>
@@ -159,14 +160,14 @@
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-img text-center">
-                            <figure><img src="./images/nhagai.png" alt=""></figure>
+                            <figure><img src="./images/tiec.png" alt=""></figure>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-12">
                         <div class="event-infobox">
                             <h2 class="title-box event-title">Lễ Thành Hôn</h2>
                             <h1>11:00 am</h1>
-                            <span>Chủ nhật |<div class="sub-day"> 02 </div>| 04/2023</span>
+                            <span>Chủ nhật |<div class="sub-day"> 02 </div>| 04 | 2023</span>
                             <p class="address" style="margin-bottom: 0;">Nhà số 1 Ngõ 114 Phố Sài Đồng</p>
                             <p class="address" >Quận Long Biên Thành Phố Hà Nội</p>
 
@@ -231,7 +232,7 @@
             </div>
         </section> -->
 
-        <div id="fh5co-gallery" class="fh5co-section-gray">
+        <div id="fh5co-gallery" class="fh5co-section-gray" style="background-color: #fff;">
             <div class="container">
                 <div class="row" style="justify-content: center;">
                     <div class="col-md-12 col-sm-12 text-center fh5co-heading animate-box">
@@ -443,7 +444,7 @@
               <p>Bạn đã xác nhận thành công!</p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="handleClose(event)">Oke</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="handleClose(event)">Đóng</button>
             </div>
           </div>
         </div>
